OSX Integration initial commit.

--- a/notification_icon/src/macos/CMakeLists.txt
+++ b/notification_icon/src/macos/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required (VERSION 3.7)
 
 set(HEADERS ${HEADERS}
-
+    ${CMAKE_CURRENT_SOURCE_DIR}/TrayIcon.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/TrayMenuItem.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/ButtonProxy.hpp
 PARENT_SCOPE
 )
 
 set(SOURCE ${SOURCE}   
-    ${CMAKE_CURRENT_SOURCE_DIR}/TrayIconMac.mm
-    ${CMAKE_CURRENT_SOURCE_DIR}/TrayIconMac.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/TrayMenu.mm
+    ${CMAKE_CURRENT_SOURCE_DIR}/TrayIcon.mm
+    ${CMAKE_CURRENT_SOURCE_DIR}/TrayMenuItem.mm
+    ${CMAKE_CURRENT_SOURCE_DIR}/ButtonProxy.mm
 PARENT_SCOPE
 )
