--- a/NotificationIconSharp/NotificationIconSharp.csproj
+++ b/NotificationIconSharp/NotificationIconSharp.csproj
@@ -5,7 +5,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RuntimeIdentifiers>win-x64;osx-x64;osx.11.0-arm64;linux-x64;</RuntimeIdentifiers>   
+    <RuntimeIdentifiers>win-x86;win-x64;osx-x64;osx.11.0-arm64;linux-x64;</RuntimeIdentifiers>   
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,13 +13,15 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <PackagePath>runtimes/osx-x64/native</PackagePath>
     </Content>
-   <!-- <Content Include="..\prebuilt\osx\arm64\Release\libnotificationicon.dylib">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+   <Content Include="..\prebuilt\osx\arm64\Release\libnotificationicon.dylib">
       <PackagePath>runtimes/osx.11.0-arm64/native</PackagePath>
-    </Content> -->
+    </Content>
     <Content Include="..\prebuilt\win\x64\Release\notificationicon.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <PackagePath>runtimes/win-x64/native</PackagePath>
+    </Content>
+    <Content Include="..\prebuilt\win\x86\Release\notificationicon.dll">
+      <PackagePath>runtimes/win-x86/native</PackagePath>
     </Content>
   </ItemGroup>
 
