--- a/notificationicon_native/CMakeLists.txt
+++ b/notificationicon_native/CMakeLists.txt
@@ -7,9 +7,9 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 
 if(WIN32)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Gy /WX /w34238")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MD /Zi")   
-    add_definitions(/DOS_WINDOWS)
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Zi")   
+    add_definitions(/DOS_WIN32)
 elseif(APPLE)
     set(CMAKE_OSX_ARCHITECTURES x86_64)
     set(CMAKE_OSX_DEPLOYMENT_TARGET "10.10")
