--- a/notificationicon_native/TestAppWIN/TestApplication.vcxproj
+++ b/notificationicon_native/TestAppWIN/TestApplication.vcxproj
@@ -120,7 +120,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>C:\dev\NotificationTrayIconSharp\notification_icon\_build\bin\Debug\notificationicon.dll;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\bin\win\x64\Debug\notificationicon.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -131,31 +131,27 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>../bin/win/x64/release/notificationicon.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\IMenuContainer.cpp" />
-    <ClCompile Include="..\src\ITrayIcon.cpp" />
-    <ClCompile Include="..\src\ITrayMenuItem.cpp" />
-    <ClCompile Include="..\src\NotificationTrayIcon.cpp" />
-    <ClCompile Include="..\src\windows\TrayIcon.cpp" />
-    <ClCompile Include="..\src\windows\TrayMenuItem.cpp" />
     <ClCompile Include="TestApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\common.h" />
-    <ClInclude Include="..\src\IMenuContainer.h" />
-    <ClInclude Include="..\src\ITrayIcon.h" />
-    <ClInclude Include="..\src\ITrayMenuItem.h" />
-    <ClInclude Include="..\src\NotificationTrayIcon.h" />
-    <ClInclude Include="..\src\windows\TrayIcon.h" />
-    <ClInclude Include="..\src\windows\TrayMenuItem.h" />
+    <CopyFileToFolders Include="..\bin\win\x64\Debug\notificationicon.dll">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
